Add `hardware` tag

--- a/_data/cloud.yml
+++ b/_data/cloud.yml
@@ -103,6 +103,7 @@ websites:
       sms: Yes
       phone: Yes
       software: Yes
+      hardware: Yes
       otp: Yes
       doc: https://cloud.ibm.com/docs/iam?topic=iam-types
 
